@@ -10,9 +10,15 @@ if [ "$1" = "configure" ] || [ "$1" = "reconfigure" ] ; then
 	pkgos_var_user_group trove
 	pkgos_write_new_conf trove trove.conf
 	pkgos_write_new_conf trove api-paste.ini
-	pkgos_dbc_postinst /etc/trove/trove.conf DEFAULT sql_connection trove $@
+	db_get nova/configure_db
+	if [ "$RET" = "true" ]; then
+		pkgos_dbc_postinst /etc/trove/trove.conf DEFAULT sql_connection trove $@
+	fi
 	pkgos_write_admin_creds /etc/trove/api-paste.ini filter:authtoken trove
-	trove-manage db_sync
+	db_get nova/configure_db
+	if [ "$RET" = "true" ]; then
+		trove-manage db_sync
+	fi
 	db_stop
 fi
 
